lessons/083/example-5/2-grafana-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: letsencrypt-dns01-staging
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - grafana.devopsbyexample.io
    secretName: grafana-devopsbyexample-io-key-pair
  rules:
  - host: grafana.devopsbyexample.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
